--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
                 <td><a href="https://ryuji3741.github.io/logicAC2.github.io/">401～500</a></td>                      
             </tr>
             <tr>
-                <td>501～600</td>
+                <td><a href="https://ryuji3741.github.io/logicAM2.github.io/AM0501%EF%BD%9E0600.html">501～600</a></td>
                 <td><a href="https://ryuji3741.github.io/logicAC2.github.io/AC0501%EF%BD%9E0600.html">501～600</a></td>                       
             </tr>
             <tr>
