--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="ロジックde懸賞 攻略サイト ステージ答え モノクロ1～500 カラー1～800 初級～上級のテクニック 点の使い方等も公開しています。">
+  <meta name="description" content="ロジックde懸賞 攻略サイト ステージ答え モノクロ カラー 初級～上級のテクニック 点の使い方等も公開しています。">
   <title>ロジックde懸賞 攻略サイト ステージ答え モノクロ401～500</title>
   <link rel="icon" href="https://ryuji3741.github.io/logicAM1.github.io/img/ICON/logicicon.png">
   <link rel="stylesheet" href="css/style.css">
@@ -365,13 +365,12 @@
                 <td><a href="https://ryuji3741.github.io/logicAC2.github.io/AC0501%EF%BD%9E0600.html">501～600</a></td>                       
             </tr>
             <tr>
-                <td>601～700</td>
+                <td><a href="https://ryuji3741.github.io/logicAM2.github.io/AM0601%EF%BD%9E0700.html">601～700</a></td>
                 <td><a href="https://ryuji3741.github.io/logicAC2.github.io/AC0601%EF%BD%9E0700.html">601～700</a></td>
             </tr>
             <tr>
-                <td>701～800</td>
+                <td><a href="https://ryuji3741.github.io/logicAM2.github.io/AM0701%EF%BD%9E0800.html">701～800</a></td>
                 <td><a href="https://ryuji3741.github.io/logicAC2.github.io/AC0701%EF%BD%9E0800.html">701～800</a></td>
-                
             </tr>
             <tr>
                 <td>801～900</td>
